<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetleg_control</name>
  <version>0.1.0</version>
  <description>Contains necessary software for controlling Jetleg robotic leg system</description>
  <maintainer email="59701038+JChunX@users.noreply.github.com">jasonx</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <depend>jetleg_interfaces</depend>
  <depend>rcl_interfaces</depend>
  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
